// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstallAgentModal renders the Helm repository installation command 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: mission-control-agent

---
apiVersion: source.toolkit.fluxcd.io/v1
kind: HelmRepository
metadata:
  name: flanksource
  namespace: mission-control-agent
spec:
  interval: 5m
  url: https://flanksource.github.io/charts

---
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: mission-control-agent
  namespace: mission-control-agent
spec:
  interval: 5m
  timeout: 10m
  chart:
    spec:
      chart: mission-control-agent
      sourceRef:
        kind: HelmRepository
        name: flanksource
        namespace: mission-control-agent
      interval: 5m0s
  values:
    upstream:
      createSecret: "true"
      host: http://localhost:3000
      username: token
      password: password
      agentName: test-new-agent-instructions
    pushTelemetry:
      enabled: "true"
      topologyName: incident-commander.demo.aws.flanksource.com-test-new-agent-instructions
"
`;

exports[`InstallAgentModal renders the Helm repository installation command with kube command 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: mission-control-agent

---
apiVersion: source.toolkit.fluxcd.io/v1
kind: HelmRepository
metadata:
  name: flanksource
  namespace: mission-control-agent
spec:
  interval: 5m
  url: https://flanksource.github.io/charts

---
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: mission-control-agent
  namespace: mission-control-agent
spec:
  interval: 5m
  timeout: 10m
  chart:
    spec:
      chart: mission-control-agent
      sourceRef:
        kind: HelmRepository
        name: flanksource
        namespace: mission-control-agent
      interval: 5m0s
  values:
    upstream:
      createSecret: "true"
      host: http://localhost:3000
      username: token
      password: password
      agentName: test-new-agent-instructions
    pushTelemetry:
      enabled: "true"
      topologyName: incident-commander.demo.aws.flanksource.com-test-new-agent-instructions

---
apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: mission-control-kubernetes
  namespace: mission-control-agent
spec:
  interval: 5m
  timeout: 10m
  chart:
    spec:
      chart: mission-control-kubernetes
      sourceRef:
        kind: HelmRepository
        name: flanksource
        namespace: mission-control-agent
      interval: 5m0s
  values:
    clusterName: test-new-agent-instructions2
    scraper:
      schedule: "@every 31m"
"
`;
